Eski ŞAHİNLER logosu yerine güncel ATS markası
frontend/public/company-logo.png ve images/logo.png (aynı dosya) eski firma markasını
taşıyordu: ŞAHİNLER DTM. Bu iki dosya Navbar ve giriş sayfasında logo fallback'i olarak
kullanılıyor — /api/store/settings/logo yanıt vermediğinde devreye giriyorlar. Bu oturumda
production'da o ucun 504 döndüğü görüldü, yani fallback teorik değil: kullanıcılar zaman
zaman kapanmış bir markanın logosunu görüyordu.

Yerine sitenin kendi güncel logosu kondu. Görüntüleme boyutu en fazla 64px yükseklik
(giriş sayfası) ve 32px (navbar) olduğu için 231x94 fazlasıyla yeterli. Dosyalar artık
adının söylediği formatta: eskiden .png adı taşıyan WebP'ydiler.

Ayrıca WebP regresyon testi frontend asset'i yerine kendi fixture'ına bağlandı
(src/test/resources/fixtures/sample-logo.webp). Aksi hâlde bu commit ile birlikte test
sessizce atlanmaya başlayacak ve hiçbir şeyi korumayacaktı.

Not: V24 migration'ındaki site_logo_url varsayılanı hâlâ /images/logo.png'yi gösteriyor;
dosya değiştiği için değer doğru, migration'a dokunulmadı (checksum).

375 test yeşil.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>